[package]
name = "pixtra"
version = "0.1.4"
edition = "2021"
authors = ["Mads Ravn <madsravn@gmail.com>"]
license = "GPL-3.0"
keywords = ["pixels", "image", "graphics", "tool"]
categories = ["multimedia::images", "multimedia::encoding"]
include = ["src/", "GPLv3-license"]
repository = "https://github.com/madsravn/pixtra"
description = "Pixtra aims to be a very simple and easy-to-use image manipulation tool by being opionated and contain a lot of examples"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "pixtra"
path = "src/lib.rs"

[[bin]]
name = "pixtrab"
path = "src/bin/main.rs" 

[dependencies]
image = "0.24.3"
