[package]
name = "pixtra"
version = "0.1.5"
edition = "2021"
authors = ["Mads Ravn <madsravn@gmail.com>"]
license = "GPL-3.0"
keywords = ["pixels", "image", "graphics", "tool"]
categories = ["multimedia::images", "multimedia::encoding"]
repository = "https://github.com/madsravn/pixtra"
description = "Pixtra aims to be a very simple and easy-to-use image manipulation tool by being opionated and contain a lot of examples"
include = [
  "src/**/*",
  "Cargo.toml",
  "GPLv3-license",
  "README.md",
  "examples/**/*"
]

[features]
pixtra = []



[lib]
name = "pixtra"
path = "src/lib.rs"

[[bin]]
name = "pixtra"
path = "src/bin/main.rs" 

[dependencies]
image = "0.24.3"


[[example]]
name = "create-image"
test = true
# required-features = ["pixtra"]
