[package]
name = "pixtra"
version = "0.2.1"
edition = "2021"
authors = ["Mads Ravn <madsravn@gmail.com>"]
license = "GPL-3.0"
keywords = ["pixels", "image", "graphics", "tool"]
categories = ["multimedia::images", "multimedia::encoding"]
repository = "https://github.com/madsravn/pixtra"
description = "Pixtra aims to be a very simple and easy-to-use image manipulation tool by being opionated and contain a lot of examples"
include = [
  "src/**/*",
  "Cargo.toml",
  "GPLv3-license",
  "README.md",
  "examples/**/*"
]

[profile.release]
debug = 1

[features]
pixtra = []

[lib]
name = "pixtra"
path = "src/lib.rs"

[[bin]]
name = "pixtra"
path = "src/bin/main.rs" 

[dependencies]
image = "0.24.3"
rand = "0.8.5"

[[example]]
name = "create-image"
test = true

[[example]]
name = "filling"
test = true

[[example]]
name = "count-and-replace"
test = true

[[example]]
name = "simple-filters"
test = true

[[example]]
name = "advanced-filters"
test = true

[[example]]
name = "pixel-builder"
test = true

[[example]]
name = "flipping-and-flopping"
test = true
